RESOLVED FIXED305053
[JSC] Fix `%TypedArray%.prototype.subarray` to Calculate `beginByteOffset` correctly to Align with ECMA-262
https://bugs.webkit.org/show_bug.cgi?id=305053
Summary [JSC] Fix `%TypedArray%.prototype.subarray` to Calculate `beginByteOffset` co...
Keita Nonaka
Reported 2026-01-07 07:41:31 PST
Fix `%TypedArray%.prototype.subarray` to calculate `beginByteOffset` correctly to align with ECMA-262. - https://tc39.es/ecma262/#sec-%typedarray%.prototype.subarray
Attachments
Keita Nonaka
Comment 1 2026-01-07 07:48:47 PST
Radar WebKit Bug Importer
Comment 2 2026-01-14 07:42:12 PST
EWS
Comment 3 2026-01-16 01:19:21 PST
Committed 305697@main (411d6878200c): <https://commits.webkit.org/305697@main> Reviewed commits have been landed. Closing PR #56200 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.